<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemModel"
            type="com.natiqhaciyef.abb_hw_2.data.model.ItemModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.view.fragment.DetailsFragment">

            <View
                android:id="@+id/backScreenBackground"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_round_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/shareBackground"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_round_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/goBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/backward_icon"
                app:layout_constraintBottom_toBottomOf="@id/backScreenBackground"
                app:layout_constraintEnd_toEndOf="@id/backScreenBackground"
                app:layout_constraintStart_toStartOf="@id/backScreenBackground"
                app:layout_constraintTop_toTopOf="@id/backScreenBackground" />

            <ImageView
                android:id="@+id/shareItem"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/share_icon"
                app:layout_constraintBottom_toBottomOf="@id/shareBackground"
                app:layout_constraintEnd_toEndOf="@id/shareBackground"
                app:layout_constraintStart_toStartOf="@id/shareBackground"
                app:layout_constraintTop_toTopOf="@id/shareBackground" />

            <ImageView
                android:id="@+id/itemImageView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemDetailsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingStart="40dp"
                android:text="@{itemModel.name}"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemImageView" />

            <TextView
                android:id="@+id/itemDetailsPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingStart="40dp"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemDetailsName" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addToCartButton"
                android:layout_width="240dp"
                android:layout_height="55dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/custom_button_background"
                android:text="@string/add_to_cart_text"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemDetailsPrice" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_details_text"
                android:paddingStart="25dp"
                android:layout_marginTop="35dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/addToCartButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/descriptionInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_info"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/titleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>